BACK_eventable_[ADD]_[eventable]_[CRUD - READ]: added a point to get all eventable results BUT dail rides (for now) : routes, controller, service etc tests are not implemented
